# OpenCVModulesCustomizationForAndroid

./: LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: placeholder.cpp
app/src/main/cpp/Tracking/include/: color_palette.hpp  cpp_helper.hpp  flow_tracker.hpp  graphics_generator.h
app/src/main/cpp/Tracking/src/: color_palette.cpp  flow_tracker.cpp  graphics_generator.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
